--- a/src/main/resources/Styles/login.css
+++ b/src/main/resources/Styles/login.css
@@ -1,23 +1,77 @@
 .login_container {
-    -fx-background-color: #EEEEEE;
+  -fx-background-color: #eeeeee;
 }
 
 /* Logo Container Styles */
 .login_logo_container {
-    -fx-background-color: #132A13;
-    -fx-alignment: center;
+  -fx-background-color: #132a13;
+  -fx-alignment: center;
 }
 
 .login_logo_container Text {
-    -fx-font-size: 2em;
-    -fx-fill: #FFFFFF;
-
+  -fx-font-size: 2em;
+  -fx-fill: #ffffff;
 }
 
 Label {
-
 }
 
 .login_logo_container FontAwesomeIconView {
-    -fx-fill: #ECF39E;
+  -fx-fill: #ecf39e;
+}
+
+/* Account Selector ChoiceBox Styles */
+.account_selector {
+  -fx-background-color: #ecf39e;
+}
+
+.account_selector .label {
+  -fx-text-fill: #132a13;
+  -fx-font-size: 1.1em;
+}
+
+.account_selector .arrow {
+  -fx-background-color: #132a13;
+}
+
+#choice-box-popup-menu {
+  -fx-background-color: #ecf39e;
+}
+
+/* Login Form Styles */
+
+#choice-prompt-text {
+  -fx-font-weight: 400;
+}
+
+.login_form_container {
+  -fx-spacing: 15;
+  -fx-alignment: top_left;
+}
+
+.login_form_container Label {
+  -fx-font-size: 1.1em;
+  -fx-font-weight: bold;
+}
+
+.input_field {
+  -fx-background-color: white;
+  -fx-pref-height: 35;
+  -fx-font-size: 1.2em;
+}
+
+.login_form_container Button {
+  -fx-background-color: #132a13;
+  -fx-text-fill: white;
+  -fx-pref-width: 350;
+  -fx-pref-height: 30;
+  -fx-font-size: 1.2em;
+}
+
+.login_form_container Button:hover {
+  -fx-cursor: hand;
+}
+
+.error_lbl {
+  -fx-text-fill: #ff0000;
 }
