Add id to Choice box

--- a/src/main/resources/Fxml/Login.fxml
+++ b/src/main/resources/Fxml/Login.fxml
@@ -22,7 +22,7 @@
    </VBox>
    <VBox layoutX="225.0" layoutY="50.0" prefHeight="350.0" prefWidth="350.0" styleClass="login_form_container" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
       <Label id="choice-prompt-text" text="Choose Your Account Type" />
-      <ChoiceBox prefWidth="150.0" styleClass="account_selector" />
+      <ChoiceBox fx:id="acc_selector" prefWidth="150.0" styleClass="account_selector" />
       <Label fx:id="payee_address_lbl" text="Payee Address:" />
       <TextField fx:id="payee_address_fld" styleClass="input_field" />
       <Label text="Password:" />
