--- a/src/main/resources/Styles/Dashboard.css
+++ b/src/main/resources/Styles/Dashboard.css
@@ -22,9 +22,9 @@
 .accounts_view {
     -fx-background-color: #FFFFFF;
     -fx-background-radius: 10 0 0 10;
-    -fx-padding: 10 0 10 0;
+    -fx-padding: 10 0 10 5;
     -fx-alignment: center;
-    -fx-border-width: 0 1 0 0;
+    -fx-border-width: 0 0 0 0;
     -fx-border-color: #000000;
     -fx-spacing: 10;
 }
@@ -82,6 +82,7 @@
     -fx-border-color: #999999;
     -fx-border-width: 1;
     -fx-border-style: dashed;
+    -fx-min-height: 190px;
 }
 
 .acc_summary_container Line {
