--- a/src/main/resources/Fxml/Admin/ClientCell.fxml
+++ b/src/main/resources/Fxml/Admin/ClientCell.fxml
@@ -6,7 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane prefHeight="50.0" prefWidth="750.0" styleClass="client_cell_container" stylesheets="@../../Styles/ClientCell.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bankify.Controllers.Admin.ClientCellController">
+<AnchorPane prefHeight="50.0" prefWidth="750.0" styleClass="client_cell_container"
+            stylesheets="@../../Styles/ClientCell.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1">
    <FontAwesomeIconView glyphName="USER" layoutX="8.0" layoutY="18.0" size="20" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
    <HBox layoutX="56.0" layoutY="-36.0" prefHeight="40.0" prefWidth="550.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="5.0">
       <Label fx:id="fName_lbl" text="Fatin" />
